--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+.body{
+  background-color: rgb(134, 70, 218);
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin: 0%;
+}
+.header{
+  padding: 2%;
+  display: flex ;
+  justify-content: center;
+  color: whitesmoke;
+}
+.quiz{
+  padding: 2%;
+  background-color: whitesmoke;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin: 3% auto;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 2px rgb(0, 0, 0, 0.3);
+  width:80vw ;
+
+}
+.option{
+  border: none;
+  background-color: whitesmoke;
+  /* margin: 5px; */
+  padding: 50px;
+  font-size: 22px;
+}
+.option:active{
+  background-color: rgb(134, 70, 218);
+  border-radius: 10px;
+}
+.btndiv{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btnn{
+  background-color: rgb(85, 44, 221);
+  color: whitesmoke;
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 22px;
+  width: 70%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btnn:active{
+  box-shadow: 0px 0px 1px 2px rgb(0, 0, 0, 0.3);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.progrss{
+  text-align: center;
+  padding: 2%;
 }
-
-.App-link {
-  color: #61dafb;
+.progressbar{
+  width: 60%;
+  height: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.persentage-div{
+  color: whitesmoke;
+  font-size: x-large;
 }
